--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                         <span class="label">Años de Experiencia</span>
                     </div>
                     <div class="highlight-item">
-                        <span class="number">3</span>
+                        <span class="number">3+</span>
                         <span class="label">Proyectos Completados</span>
                     </div>
                     <div class="highlight-item">
@@ -96,26 +96,23 @@
             <h2 class="section-title">Proyectos Principales</h2>
             <div class="projects-grid">
                 <div class="project-card">
-                    <div class="project-image">🏐</div>
+                    <img src="VolleyFantasy.jpg" alt="VolleyFantasy" class="project-image-img">
                     <div class="project-content">
                         <h3>Fantasy Volleyball App</h3>
                         <p class="project-description">
                             Aplicación web estilo fantasy para competiciones de voleibol. Incluye 
-                            gestión de jugadores, estadísticas en tiempo real, sistema de puntuación 
+                            gestión de jugadores, estadísticas semanales, sistema de puntuación 
                             y clasificaciones dinámicas.
                         </p>
                         <div class="tech-tags">
-                            <span class="tech-tag">React.js</span>
+                            <span class="tech-tag">TypeScript</span>
+                            <span class="tech-tag">React</span>
                             <span class="tech-tag">Node.js</span>
-                            <span class="tech-tag">MongoDB</span>
-                            <span class="tech-tag">API REST</span>
+                            <span class="tech-tag">Docker</span>
                         </div>
                         <div class="project-links">
-                            <a href="https://github.com/tu-usuario/fantasy-volleyball" target="_blank" class="project-link">
+                            <a href="https://github.com/Osru11/VolleyFantasy" target="_blank" class="project-link">
                                 Ver Código
-                            </a>
-                            <a href="#" class="project-link secondary">
-                                Demo Live
                             </a>
                         </div>
                     </div>
@@ -124,22 +121,22 @@
                 <div class="project-card">
                     <div class="project-image">👥</div>
                     <div class="project-content">
-                        <h3>Sistema de Gestión de Equipos (TFG)</h3>
+                        <h3>DataBeachVolley - Sistema de Gestión</h3>
                         <p class="project-description">
-                            Trabajo de Fin de Grado: Sistema completo para gestión de equipos deportivos. 
-                            Gestión de jugadores, calendario de entrenamientos, partidos y comunicación interna.
+                            Sistema completo para análisis y gestión de equipos de voleibol y voley playa. 
+                            Incluye análisis de datos, interfaz React y backend robusto con Django.
                         </p>
                         <div class="tech-tags">
-                            <span class="tech-tag">PHP</span>
+                            <span class="tech-tag">Python</span>
+                            <span class="tech-tag">Django</span>
+                            <span class="tech-tag">React</span>
                             <span class="tech-tag">MySQL</span>
-                            <span class="tech-tag">JavaScript</span>
-                            <span class="tech-tag">Bootstrap</span>
                         </div>
                         <div class="project-links">
-                            <a href="https://github.com/tu-usuario/team-management" target="_blank" class="project-link">
+                            <a href="https://github.com/Osru11/DataBeachVolley" target="_blank" class="project-link">
                                 Ver Código
                             </a>
-                            <a href="#" class="project-link secondary">
+                            <a href="Memoria_OscarNoguero.pdf" target="_blank" class="project-link secondary">
                                 Documentación
                             </a>
                         </div>
@@ -153,7 +150,7 @@
                         <p class="project-description">
                             Tienda online de juegos de mesa con diseño responsive. Sistema de categorías 
                             (Habilidad, Cartas, Estrategia, Juegos de Rol), navegación intuitiva y 
-                            catálogo completo de productos con interfaz moderna.
+                            catálogo de productos con interfaz moderna.
                         </p>
                         <div class="tech-tags">
                             <span class="tech-tag">HTML5</span>
@@ -173,12 +170,12 @@
                 </div>
 
                 <div class="project-card">
-                    <div class="project-image">🤖</div>
+                    <img src="chatbot.png" alt="Chatbot" class="project-image-img">
                     <div class="project-content">
                         <h3>Chatbot con IA Integrada</h3>
                         <p class="project-description">
                             Desarrollo de chatbot inteligente para Nubidoc. Implementación de modelos LLM 
-                            usando HuggingFace, scripts en Python y Google Colab para procesamiento.
+                            usando HuggingFace, scripts en Python y ejecutados en Google Colab.
                         </p>
                         <div class="tech-tags">
                             <span class="tech-tag">Python</span>
@@ -284,11 +281,9 @@
                     <div class="timeline-meta">Nubidoc | Mayo 2024 - Agosto 2024</div>
                     <div class="timeline-description">
                         <ul>
-                            <li>Desarrollo de software con IA integrada (Chatbot empresarial)</li>
+                            <li>Desarrollo de software con IA integrada (Chatbot para app web)</li>
                             <li>Creación de scripts en Python usando Jupyter en Google Colab</li>
                             <li>Integración de modelos LLM mediante HuggingFace</li>
-                            <li>Colaboración en proyectos de automatización con IA</li>
-                            <li>Optimización de procesos mediante análisis de datos</li>
                         </ul>
                     </div>
                 </div>
