--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <a href="mailto:oscarnoguero.val@gmail.com" class="social-btn primary">
                         <i class="fas fa-envelope"></i> Email
                     </a>
-                    <a href="https://github.com/Osru11" target="_blank" class="social-btn">
+                    <a href="https://github.com/OscarNoguero" target="_blank" class="social-btn">
                         <i class="fab fa-github"></i> GitHub
                     </a>
                     <a href="https://linkedin.com/in/óscar-noguero-casorrán-9217a5276" target="_blank" class="social-btn">
@@ -111,7 +111,7 @@
                             <span class="tech-tag">Docker</span>
                         </div>
                         <div class="project-links">
-                            <a href="https://github.com/Osru11/VolleyFantasy" target="_blank" class="project-link">
+                            <a href="https://github.com/OscarNoguero/VolleyFantasy" target="_blank" class="project-link">
                                 Ver Código
                             </a>
                         </div>
@@ -119,7 +119,7 @@
                 </div>
 
                 <div class="project-card">
-                    <div class="project-image">👥</div>
+                    <img src="DataBeachVolley.png" alt="DataBeachVolley" class="project-image-img">
                     <div class="project-content">
                         <h3>DataBeachVolley - Sistema de Gestión</h3>
                         <p class="project-description">
@@ -133,7 +133,7 @@
                             <span class="tech-tag">MySQL</span>
                         </div>
                         <div class="project-links">
-                            <a href="https://github.com/Osru11/DataBeachVolley" target="_blank" class="project-link">
+                            <a href="https://github.com/OscarNoguero/DataBeachVolley" target="_blank" class="project-link">
                                 Ver Código
                             </a>
                             <a href="Memoria_OscarNoguero.pdf" target="_blank" class="project-link secondary">
@@ -159,10 +159,10 @@
                             <span class="tech-tag">Responsive</span>
                         </div>
                         <div class="project-links">
-                            <a href="https://github.com/Osru11/El-Rey-de-los-Dados" target="_blank" class="project-link">
+                            <a href="https://github.com/OscarNoguero/El-Rey-de-los-Dados" target="_blank" class="project-link">
                                 Ver Código
                             </a>
-                            <a href="https://osru11.github.io/El-Rey-de-los-Dados/" target="_blank" class="project-link secondary">
+                            <a href="https://OscarNoguero.github.io/El-Rey-de-los-Dados/" target="_blank" class="project-link secondary">
                                 Demo Live
                             </a>
                         </div>
@@ -340,7 +340,7 @@
                     <div class="contact-icon"><i class="fab fa-github"></i></div>
                     <div class="contact-info">
                         <div style="color: var(--text-secondary); font-size: 0.9rem;">GitHub</div>
-                        <a href="https://github.com/Osru11" target="_blank">@Osru11</a>
+                        <a href="https://github.com/OscarNoguero" target="_blank">@OscarNoguero</a>
                     </div>
                 </div>
 
